--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/FlyoutCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/FlyoutCompare.cshtml
@@ -47,11 +47,11 @@
         
         <div class="buttons clearfix">
 
-            <a class="btn btn-primary pull-left" href="@Url.RouteUrl("CompareProducts")">
+            <a class="btn btn-primary btn-sm pull-left" href="@Url.RouteUrl("CompareProducts")">
                 @T("Products.Compare.List")
             </a>
             
-            <a class="btn btn-danger pull-right" href="@Url.Action("ClearCompareList")" rel="nofollow">
+            <a class="btn btn-danger btn-sm pull-right" href="@Url.Action("ClearCompareList")" rel="nofollow">
                 @T("Products.Compare.Clear")
             </a>   
 
