--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/Menu.cshtml
@@ -8,7 +8,7 @@
 @Html.Widget("header_menu_before")
 
 <div class="menubar">
-    <nav class="menu-group regional-selectors">
+    <nav class="menubar-group pull-left m-l-0">
         @Html.Action("LanguageSelector", "Common")
         @Html.Action("CurrencySelector", "Common")
     </nav>
