--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/FlyoutWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/FlyoutWishlist.cshtml
@@ -89,7 +89,7 @@
         </ul>
 
         <div class="buttons clearfix">
-            <a class="btn btn-primary pull-left" href="@Url.RouteUrl("Wishlist")">
+            <a class="btn btn-primary btn-sm pull-left" href="@Url.RouteUrl("Wishlist")">
                 @T("Wishlist.Mini.ViewWishlist")
             </a>    
         </div>
