--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/OrderSummary.cshtml
@@ -33,7 +33,7 @@
 			@if (Model.DisplayShortDesc && !String.IsNullOrEmpty(item.ShortDesc))
 			{
 				<div class="short-desc">
-					@item.ShortDesc
+					@Html.Raw(item.ShortDesc)
 				</div>
 			}
 
@@ -373,10 +373,10 @@
 		if (Model.IsEditable)
 		{
 			<div class="common-buttons clearfix">
-				<button type="submit" name="updatecart" value="updatecart" class="btn pull-right update-cart-button">
+				<button type="submit" name="updatecart" value="updatecart" class="btn btn-secondary pull-right update-cart-button">
 					<i class="fa fa-refresh"></i>&nbsp;@T("ShoppingCart.UpdateCart")
 				</button>
-                <button type="submit" name="continueshopping" value="continueshopping" class="btn pull-left continue-shopping-button">
+                <button type="submit" name="continueshopping" value="continueshopping" class="btn btn-secondary pull-left continue-shopping-button">
                     <i class="fa fa-caret-left"></i>&nbsp;@T("ShoppingCart.ContinueShopping")
                 </button>
 				<input type="submit" name="startcheckout" value="startcheckout" id="startcheckout" style="display: none;" />
