--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Checkout/BillingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Checkout/BillingAddress.cshtml
@@ -33,7 +33,7 @@
                             <div class="address-item">
                             
                                 <div class="select-button">
-                                    <button class="btn btn-block select-billing-address-button"  onclick="setLocation('@Url.Action("SelectBillingAddress", new { addressId = item.Id })')">
+                                    <button class="btn btn-secondary btn-block select-billing-address-button"  onclick="setLocation('@Url.Action("SelectBillingAddress", new { addressId = item.Id })')">
                                         @T("Checkout.BillToThisAddress")
                                     </button>
                                 </div>
