--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Checkout/PaymentMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Checkout/PaymentMethod.cshtml
@@ -22,11 +22,13 @@
             @Html.Widget("checkout_payment_method_top")
             if (Model.DisplayRewardPoints && Model.PaymentMethods.Count > 0)
             {
-                <div class="alert alert-info">
-                    <label class="checkbox">
-                        @Html.EditorFor(model => model.UseRewardPoints)
-                        @Html.Raw(string.Format(T("Checkout.UseRewardPoints").Text, "<strong>" + Model.RewardPointsBalance + "</strong>", "<strong>" + Model.RewardPointsAmount + "</strong>"))
-                    </label>
+                <div class="reward-points alert alert-info">
+                    <div class="checkbox">
+                        <label>
+                            @Html.EditorFor(model => model.UseRewardPoints)
+                            @Html.Raw(string.Format(T("Checkout.UseRewardPoints").Text, "<strong>" + Model.RewardPointsBalance + "</strong>", "<strong>" + Model.RewardPointsAmount + "</strong>"))
+                        </label>
+                    </div>
                 </div>
             }
             <div class="opt-list payment-methods">
